--- a/bower.json
+++ b/bower.json
@@ -5,6 +5,6 @@
     "codemirror": ">= 3.16.0",
     "esprima": ">= 1.0.4",
     "lazy.js": ">= 0.1.0",
-    "mustache": ">= 0.7.2"
+    "jasmine": ">= 1.3.1"
   }
 }
