--- a/bower.json
+++ b/bower.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "dependencies": {
     "codemirror": ">= 3.16.0",
+    "doctrine": ">= 0.0.5",
     "esprima": ">= 1.0.4",
     "lazy.js": ">= 0.1.0",
     "jasmine": ">= 1.3.1"
