--- a/bower.json
+++ b/bower.json
@@ -8,6 +8,7 @@
     "esprima": ">= 1.0.4",
     "lazy.js": ">= 0.1.0",
     "jasmine": ">= 1.3.1",
+    "marked": ">= 0.2.9",
     "mustache": ">= 0.7.2"
   }
 }
