I swear to God...

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "breakneck",
+  "name": "breakneck.js",
   "version": "0.1.0",
   "description": "Auto-generate docs, specs, and benchmarks from JSDoc-style comments",
   "main": "breakneck.js",
