--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "commander": "*",
     "doctrine": "git://github.com/dtao/doctrine.git",
     "esprima": "*",
-    "lazy.js": ">= 0.1.1",
+    "lazy.js": "git://github.com/dtao/lazy.js.git",
     "marked": "*",
     "mustache": ">= 0.7.2",
     "should": ">= 1.3.0",
