temporarily adding jasmine-node as a dependency...
...because it seems to be necessary to get the default test
runner to work.

rest assured: I will not stand for this!

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "commander": "*",
     "doctrine": "git://github.com/dtao/doctrine.git",
     "esprima": "*",
+    "jasmine-node": "*",
     "lazy.js": ">= 0.1.2",
     "marked": "*",
     "mustache": ">= 0.7.2",
