--- a/package.json
+++ b/package.json
@@ -19,16 +19,13 @@
     "url": "https://github.com/dtao/breakneck/issues"
   },
   "dependencies": {
-    "colors": "*",
     "commander": "*",
     "doctrine": "git://github.com/dtao/doctrine.git",
     "esprima": "*",
     "jasmine-node": "*",
     "lazy.js": ">= 0.1.2",
     "marked": "*",
-    "mustache": ">= 0.7.2",
-    "should": ">= 1.3.0",
-    "string-table": ">= 0.1.5"
+    "mustache": ">= 0.7.2"
   },
   "devDependencies": {
     "coffee-script": ">= 1.6.1",
