--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "breakneck": "bin/breakneck"
   },
   "scripts": {
-    "test": "mocha --compilers coffee:coffee-script"
+    "test": "breakneck -t breakneck.js && mocha --compilers coffee:coffee-script"
   },
   "repository": {
     "type": "git",
