--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "autodoc.js",
+  "name": "autodoc",
   "version": "0.2.2",
   "description": "Auto-generate docs, specs, and benchmarks from JSDoc-style comments",
   "main": "autodoc-node.js",
