added explicit dependency on should

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "devDependencies": {
     "coffee-script": ">= 1.6.1",
     "mocha": ">= 1.13.0",
-    "sinon": ">= 1.7.3"
+    "sinon": ">= 1.7.3",
+    "should": ">= 2.0.2"
   }
 }
