attempt at using node-sass to remove docs.css from the repo
doesn't quite work -- libsass doesn't seem to like bootstrap's
filter: alpha(opacity=x) rules for IE. going to try something
else

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "lazy.js": ">= 0.1.2",
     "marked": "*",
     "mustache": ">= 0.7.2",
+    "node-sass": ">= 0.7.0",
     "string-table": ">= 0.1.5"
   },
   "devDependencies": {
