changed behavior of --globals so it can reference any arbitrary library

--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "coffee-script": ">= 1.6.1",
     "mocha": ">= 1.13.0",
     "sinon": ">= 1.7.3",
-    "should": ">= 2.0.2"
+    "should": ">= 2.0.2",
+    "underscore": ">= 1.5.2"
   }
 }
