--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "lazy.js": ">= 0.2.0",
     "marked": ">= 0.2.10",
     "mustache": ">= 0.7.2",
+    "resolve": ">= 0.6.1",
     "string-table": ">= 0.1.5"
   },
   "devDependencies": {
