--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "doctrine": ">= 0.1.0",
     "esprima": "*",
     "jasmine-node": "*",
-    "lazy.js": ">= 0.3.1",
+    "lazy.js": "git://github.com/dtao/lazy.js.git",
     "marked": ">= 0.2.10",
     "mustache": ">= 0.7.2",
     "resolve": ">= 0.6.1",
