--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "benchmark": ">= 1.0.0",
+    "bootscrap": ">= 0.1.0",
     "codemirror-highlight": ">= 1.1.1",
     "coffee-script": ">= 1.6.1",
     "commander": ">= 2.1.0",
