firm up some of these versions

--- a/package.json
+++ b/package.json
@@ -22,10 +22,10 @@
     "benchmark": ">= 1.0.0",
     "codemirror-highlight": ">= 1.1.1",
     "coffee-script": ">= 1.6.1",
-    "commander": "*",
+    "commander": ">= 2.1.0",
     "doctrine": ">= 0.2.0",
-    "esprima": "*",
-    "jasmine-node": "*",
+    "esprima": ">= 1.0.4",
+    "jasmine-node": "1.12.0",
     "lazy.js": "git://github.com/dtao/lazy.js.git",
     "less": ">= 1.6.0",
     "marked": ">= 0.2.10",
