--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "esprima": "*",
     "jasmine-node": "*",
     "lazy.js": "git://github.com/dtao/lazy.js.git",
+    "less": ">= 1.6.0",
     "marked": ">= 0.2.10",
     "mustache": ">= 0.7.2",
     "resolve": ">= 0.6.1",
