--- a/package.json
+++ b/package.json
@@ -19,21 +19,21 @@
     "url": "https://github.com/dtao/autodoc/issues"
   },
   "dependencies": {
-    "benchmark": ">= 1.0.0",
-    "bootscrap": ">= 0.1.0",
-    "codemirror-highlight": ">= 1.1.1",
-    "coffee-script": ">= 1.6.1",
-    "commander": ">= 2.1.0",
-    "doctrine": ">= 0.2.0",
-    "esprima": ">= 1.0.4",
+    "benchmark": "1.0.0",
+    "bootscrap": "0.1.0",
+    "codemirror-highlight": "1.1.1",
+    "coffee-script": "1.6.1",
+    "commander": "2.1.0",
+    "doctrine": "0.2.0",
+    "esprima": "1.0.4",
     "jasmine-node": "1.12.0",
     "lazy.js": "git://github.com/dtao/lazy.js.git",
-    "less": ">= 1.6.0",
-    "marked": ">= 0.2.10",
-    "mustache": ">= 0.7.2",
-    "resolve": ">= 0.6.1",
-    "spiderman": ">= 0.1.4",
-    "string-table": ">= 0.1.5"
+    "less": "1.6.0",
+    "marked": "0.2.10",
+    "mustache": "0.7.2",
+    "resolve": "0.6.1",
+    "spiderman": "0.1.4",
+    "string-table": "0.1.5"
   },
   "devDependencies": {
     "coffee-script": ">= 1.6.1",
