--- a/package.json
+++ b/package.json
@@ -21,9 +21,10 @@
   "dependencies": {
     "benchmark": "1.0.0",
     "bootscrap": "0.1.0",
+    "codemirror": "3.20.0",
     "codemirror-highlight": "1.1.1",
     "coffee-script": "1.6.1",
-    "commander": "2.1.0",
+    "commander": "2.0.0",
     "doctrine": "0.2.0",
     "esprima": "1.0.4",
     "jasmine-node": "1.12.0",
