--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
   },
   "devDependencies": {
     "coffee-script": ">= 1.6.1",
-    "mocha": ">= 1.13.0",
+    "mocha": "1.14.0",
     "sinon": ">= 1.7.3",
     "should": ">= 2.0.2",
     "underscore": ">= 1.5.2"
