--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "codemirror-highlight": "1.1.1",
     "coffee-script": "1.6.1",
     "commander": "2.0.0",
-    "doctrine": "0.2.0",
+    "doctrine": "git://github.com/dtao/doctrine.git#line-numbers-option",
     "esprima": "1.0.4",
     "jasmine-node": "1.12.0",
     "lazy.js": "git://github.com/dtao/lazy.js.git",
